[project]
name = "mind-vault"
version = "0.1.0"
description = "Obsidian-compatible file-based note storage with search and graph traversal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
mind-vault-mcp = "mind_vault.mcp_server:main"

[project.optional-dependencies]
fetch = [
    "trafilatura>=2.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "youtube-transcript-api>=1.0",
    "pymupdf>=1.25",
]
dev = ["pytest>=8.0"]
all = ["mind-vault[fetch,dev]"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
